--- a/weather_adhoc.org
+++ b/weather_adhoc.org
@@ -26,7 +26,7 @@ cache_loading: on
 munging: on
 logging: off
 load_libraries: on
-libraries: reshape, plyr, ggplot2, stringr, lubridate, swishdbtools, gisviz
+libraries: reshape, plyr, ggplot2, stringr, lubridate, swishdbtools, gisviz, rgdal
 as_factors: on
 data_tables: off
 #+end_src
@@ -59,5 +59,11 @@ data_tables: off
   
   gGeoCode2(locations[1,])
   c(xs[1], ys[1])
+  
+  ## Treat data frame as spatial points
+  epsg <- make_EPSG()
+  pts <- SpatialPointsDataFrame(cbind(xs[1:100],ys[1:100]),locations,
+    proj4string=CRS(epsg$prj4[epsg$code %in% '4283']))
+  writeOGR(pts, 'data/locations.shp', 'locations', driver='ESRI Shapefile')
   
 #+end_src
